--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": ">_ mcl - My Command Line - A personal generic customizable Command Line",
   "main": "index.js",
+  "keywords": ["mcl","my-command-line","osx","linux","command line","custom command line","personal command line","scripts"],
+  "homepage": "https://github.com/stramanu/my-command-line",
+  "git": "repository",
   "bin": {
     "mcl": "./index.js"
   },
