--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
   "name": "my-command-line",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": ">_ mcl - My Command Line - A personal generic customizable Command Line",
   "main": "index.js",
-  "keywords": ["mcl","my-command-line","osx","linux","command line","custom command line","personal command line","scripts"],
+  "keywords": [
+    "mcl",
+    "my-command-line",
+    "osx",
+    "linux",
+    "command line",
+    "custom command line",
+    "personal command line",
+    "scripts"
+  ],
   "homepage": "https://github.com/stramanu/my-command-line",
   "git": "repository",
   "bin": {
     "mcl": "./index.js"
   },
   "scripts": {
-    "i": "npm link && clear && echo \">_ mcl \"Management CLI installed!!\"\n Now you can run \\033[0;36mmcl\\033[0m in your shell\n\"",
-    "u": "npm unlink && rm /usr/local/bin/mcl && echo \">_ mcl \"Management CLI uninstalled!!\"\n\""
+    "i": "bash install.sh",
+    "u": "bash uninstall.sh"
   },
   "author": "Emanuele Strazzullo <emanuelestrazzullo.es@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^14.0.5",
     "autoprefixer": "^9.8.0",
-    "bcrypt": "^3.0.7",
+    "bcrypt": "^5.1.0",
     "chalk": "^2.3.0",
     "clear": "0.0.1",
     "clipboardy": "^2.1.0",
@@ -33,8 +42,8 @@
     "merge-yaml": "^1.0.0",
     "minimist": "^1.2.0",
     "node-pv": "^0.1.5",
-    "node-sass": "^4.13.0",
     "postcss-cli": "^7.1.1",
+    "sass": "^1.64.2",
     "shelljs": "^0.8.3",
     "simple-git": "^1.89.0",
     "sudo-prompt": "^9.1.1",
